# cpp_online_judge_server

./: .dockerignore  .gitignore  README.md
oj_platform/: .dockerignore  .env  CMakeLists.txt  Dockerfile  README.md  README.redis.md  compose-up-server.sh  compose-up.sh  docker-compose.server.yml  docker-compose.yml
oj_platform/agent-service/: README.md  main.py  oj_agent_module_design.md  pyproject.toml
oj_platform/agent-service/app/: main.py
oj_platform/agent-service/app/api/: chat.py  dependencies.py  diagnoses.py  health.py
oj_platform/agent-service/app/clients/: oj_client.py  openrouter_client.py
oj_platform/agent-service/app/core/: config.py
oj_platform/agent-service/app/graphs/: chat_graph.py  chat_state.py  nodes.py  utils.py
oj_platform/agent-service/app/llm/: messages.py
oj_platform/agent-service/app/rag/: ingest.py  retriever.py
oj_platform/agent-service/app/schemas/: chat.py  diagnosis.py  oj.py  rag.py  streaming.py
oj_platform/agent-service/app/services/: planner_service.py  prompt_service.py  safety_service.py
oj_platform/agent-service/app/tools/: executor.py  oj_tools.py  rag_tools.py
oj_platform/agent-service/app/workflows/: chat_workflow.py  diagnosis_workflow.py
oj_platform/agent-service/knowledge/: README.md
oj_platform/agent-service/knowledge/algorithms/: bracket-normalization-hashing.md  complexity-analysis.md  dsu-on-tree.md  greedy-linked-list-simulation.md  hash-table-two-sum.md  merge-sorted-arrays.md  scc-reachability.md  sliding-window.md
oj_platform/agent-service/knowledge/problem_hints/: problem-1000-a-plus-b.md  problem-1001-reachability-from-capital.md  problem-1002-lomsat-gelral.md  problem-1003-two-teams.md  problem-1007-brackets.md
oj_platform/agent-service/scripts/: check_openrouter.py  check_structured_diagnosis.py  ingest_knowledge.py
oj_platform/agent-service/tests/: test_chat_workflow_units.py
oj_platform/cmake/: Findhiredis.cmake  README.md
oj_platform/common/: README.md  judge_task.h  object_storage_client.cpp  object_storage_client.h  path_utils.cpp  path_utils.h  platform_config.h  platform_types.h  protocol.hpp  protocol_json.cpp  protocol_json.h  rabbitmq_client.cpp  rabbitmq_client.h
oj_platform/problems/: README.md
oj_platform/problems/1000/: checker.cpp  meta.json  statement_zh.md
oj_platform/problems/1001/: meta.json  statement_zh.md
oj_platform/problems/1001/tests/: 2.in
oj_platform/problems/1002/: meta.json  statement_zh.md
oj_platform/problems/1003/: checker.cpp  meta.json  statement_zh.md
oj_platform/problems/1003/tests/: 2.in
oj_platform/problems/1004/: meta.json  statement_zh.md
oj_platform/problems/1004/tests/: 1.in  1.out  2.in
oj_platform/problems/1005/: checker.cpp  meta.json  statement_zh.md
oj_platform/problems/1005/tests/: 10.in  12.in  14.in  15.in  16.in  17.in  18.in  19.in  19.out  2.in  20.in  3.in  6.in  8.in  9.in
oj_platform/problems/1006/: checker.cpp  meta.json  statement_zh.md
oj_platform/problems/1006/tests/: 1.in  10.in  11.in  12.in  13.in  14.in  15.in  16.in  17.in  18.in  19.in  2.in  20.in  21.in  22.in  23.in  24.in  25.in  26.in  27.in  28.in  29.in  3.in  30.in  31.in  32.in  33.in  34.in  35.in  36.in  37.in  38.in  39.in  4.in  5.in  6.in  7.in  8.in  9.in
oj_platform/runtime/: README.md
oj_platform/runtime/judge_worker/submission_5024064148394/: main.cpp
oj_platform/runtime/judge_worker/submission_8035073889659/: main.cpp
oj_platform/runtime/submissions/sub-13459055719728/: result.json
oj_platform/scripts/: build-prod-images.sh  save-prod-images.sh
oj_platform/services/: README.md
oj_platform/services/go_monitor/: Dockerfile  config.go  go.mod  go.sum  main.go  mysql.go  mysql_test.go  rabbitmq.go  redis.go  summary.go  summary_test.go
oj_platform/services/judge_dispatcher/: dispatcher_utils.cpp  dispatcher_utils.h  main.cpp  worker_client.cpp  worker_client.h
oj_platform/services/judge_worker/: README.md  compile_service.cpp  compile_service.h  judge_core.cpp  judge_core.h  judge_summary.cpp  judge_summary.h  main.cpp  routes.cpp  routes.h  run_service.cpp  run_service.h
oj_platform/services/oj_server/: README.md  assignment_leaderboard_repository.cpp  assignment_leaderboard_repository.h  assignment_repository.cpp  assignment_repository.h  auth_service.cpp  auth_service.h  judge_service.cpp  judge_service.h  main.cpp  mysql_client.cpp  mysql_client.h  problem_importer.cpp  problem_importer.h  problem_repository.cpp  problem_repository.h  rabbitmq_client.cpp  rabbitmq_client.h  redis_client.cpp  redis_client.h  routes.cpp  submission_repository.cpp  submission_repository.h
oj_platform/services/oj_server/biz/: agent_client.cpp  agent_client.h  ai_assistant_service.cpp  ai_assistant_service.h  auth_service.cpp  auth_service.h  judge_service.cpp  problem_importer.cpp  problem_importer.h
oj_platform/services/oj_server/data/: assignment_leaderboard_repository.cpp  assignment_leaderboard_repository.h  assignment_repository.cpp  assignment_repository.h  conversation_repository.cpp  mysql_client.cpp  (+7 more)
oj_platform/sql/: schema.sql
oj_platform/tests/: README.md  compile_service_test.cpp  dispatcher_utils_test.cpp  judge_core_test.cpp  judge_summary_test.cpp  judge_worker_http_integration_test.cpp  path_utils_test.cpp  platform_config_test.cpp  protocol_json_test.cpp  run_service_test.cpp
oj_platform/tests/test_support/: env_guard.h  http_client.h  temp_dir.h
oj_platform/tools/: problem_migrator.cpp
oj_platform/web/: README.md  admin-assignment-create.html  admin-assignment-create.js  admin-assignment-edit.html  admin-assignment-edit.js  admin-problem-create.html  admin-problem-create.js  admin-problem-edit.html  admin-problem-edit.js  agent.html  agent.js  assignment-leaderboard.html  assignment-leaderboard.js  assignment.html  assignment.js  assignments.html  assignments.js  auth.js  home.html  home.js  index.html  index.js  markdown.js  monitor.html  monitor.js  nav.js  problem.html  problem.js  problems.html  styles.css  submission.html  submission.js  submissions.html  submissions.js  submit.html  submit.js
(+5 files in other folders)
