[project]
name = "agent-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "httpx>=0.28.1",
    "langchain>=1.3.13",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.4.9",
    "langchain-openai>=1.3.5",
    "langchain-openrouter>=0.2.6",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.9",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]
