[project]
name = "agent-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.3.5",
    "fastapi>=0.139.0",
    "fastembed>=0.8.0",
    "httpx>=0.28.1",
    "langchain-core>=1.4.9",
    "langchain-text-splitters>=1.1.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "langchain-openrouter>=0.2.6",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]
